Adding new karma spec runner for better output; running karma-spec-reporter on desktop, putting karma-spec-runner-2 on packages.json to test on laptop for comparison

--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "devDependencies":
-    {
-      "jasmine-core": "latest",
-      "karma": "latest",
-      "karma-jasmine": "latest",
-      "phantomjs-prebuilt": "latest",
-      "karma-phantomjs-launcher": "latest"
-    },
-
-    "scripts": {
-        "preinstall": "npm install -g karma-cli"
-    }
+  "devDependencies": {
+    "jasmine-core": "latest",
+    "karma": "latest",
+    "karma-jasmine": "latest",
+    "karma-phantomjs-launcher": "latest",
+    "karma-spec-reporter": "0.0.24",
+    "phantomjs-prebuilt": "latest",
+    "karma-spec-reporter-2": "latest"
+  },
+  "scripts": {
+    "preinstall": "npm install -g karma-cli"
+  }
 }
